--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div class="wrapper">
       <header>
         <h1>Alfred Shutdown Timer</h1>
-        <p>A script for Alfred to shutdown your computer in X minutes.</p>
+        <p>A script for Alfred to shutdown your computer in x minutes.</p>
         <p class="view"><a href="https://github.com/curtisblackwell/alfred_shutdown_timer">View the Project on GitHub <small>curtisblackwell/alfred_shutdown_timer</small></a></p>
         <ul>
           <li><a href="https://github.com/curtisblackwell/alfred_shutdown_timer/zipball/master">Download <strong>ZIP File</strong></a></li>
